# Anki-Android

.github/workflows/: README.md  ios.yml
docs/platform/: ios-ipados-port.md
ios/AnkiBackendBridge/: Cargo.toml
ios/AnkiBackendBridge/include/: anki_backend_bridge.h
ios/AnkiBackendBridge/src/: lib.rs
ios/AnkiDroid/AnkiDroid/: AnkiDroidApp.swift  ContentView.swift
ios/AnkiDroid/AnkiDroid.xcodeproj/: project.pbxproj
ios/AnkiDroid/AnkiDroid.xcodeproj/xcshareddata/xcschemes/: AnkiDroid.xcscheme
ios/AnkiIOSPort/: Package.swift  README.md
ios/AnkiIOSPort/Sources/AnkiIOSPort/: AnkiBackend.swift  DeckAndSync.swift  DefaultAnkiBackends.swift  OfficialAnkiRustBackend.swift  ReviewSession.swift
ios/AnkiIOSPort/Tests/AnkiIOSPortTests/: DeckAndSyncTests.swift  ReviewSessionTests.swift
ios/FlutterAnkiDroid/: pubspec.yaml
ios/FlutterAnkiDroid/lib/: main.dart
ios/FlutterAnkiDroid/test/: deck_store_test.dart  home_widget_test.dart
scripts/ci/: ios-build.sh  ios-package.sh
scripts/ios/: build-anki-backend-xcframework.sh  build-flutter-module.sh
