[package]
name = "anki_backend_bridge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "anki_backend_bridge"
crate-type = ["staticlib"]

[dependencies]
anki = { git = "https://github.com/ankitects/anki.git", tag = "26.05", package = "anki", default-features = false, features = ["rustls"] }
libc = "0.2"
serde_json = "1"
